<?xml version="1.0"?>
<package format="2">
  <name>cram_commander</name>
  <version>0.0.0</version>
  <description>cram_commander</description>
  <author>Gayane Kazhoyan</author>
  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslisp</depend>
  <depend>cram_designators</depend>
  <!-- <depend>roslisp_utilities</depend> -->
  <!-- <depend>cl_transforms</depend> -->
  <!-- <depend>cl_transforms_stamped</depend> -->
  <!-- <depend>cl_tf</depend> -->
  <!-- <depend>actionlib_lisp</depend> -->
  <!-- <depend>yason</depend> -->
  <!-- <depend>alexandria</depend> -->
  <!-- <depend>cram_language</depend> -->
  <!-- <depend>cram_utilities</depend> -->
  <!-- <depend>cram_process_modules</depend> -->
  <!-- <depend>cram_prolog</depend> -->
  <!-- <depend>cram_tf</depend> -->
  <!-- <depend>cram_robot_interfaces</depend> -->
  <!-- <depend>cram_plan_failures</depend> -->
  <!-- <depend>sensor_msgs</depend> -->
  <!-- <depend>geometry_msgs</depend> -->
  <!-- <depend>visualization_msgs</depend> -->
</package>
