<?xml version="1.0"?>
<package format="2">
  <name>cram_commander</name>
  <version>0.0.0</version>
  <description>cram_commander</description>
  <author>Gayane Kazhoyan</author>
  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslisp</depend>
  <depend>roslisp_utilities</depend>
  <depend>cram_designators</depend>
  <depend>cram_sherpa_blue_wasp</depend>
  <depend>cram_sherpa_red_wasp</depend>
  <depend>cram_sherpa_hawk</depend>
  <depend>cram_sherpa_donkey</depend>
  <depend>sherpa_msgs</depend>
</package>
