<package>
  <name>alexandria</name>
  <version>0.2.2</version>
  <description>
      3rd party library: Alexandria
  </description>

  <author>Many</author>

  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>

  <license>Public domain</license>

  <url type="website">http://common-lisp.net/project/alexandria/</url>
  <url type="bugtracker">https://github.com/cram2/cram_3rdparty/issues</url>
  <url type="repository">https://github.com/cram2/cram_3rdparty</url>
  <url type="repository">git://common-lisp.net/projects/alexandria/alexandria.git</url>
  <!--external-version>b1c6ee03c41e0db97989ae38e70da4d8263e09d1</external-version-->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sbcl</build_depend>

  <run_depend>sbcl</run_depend>
</package>


