<package>
  <name>babel</name>
  <version>0.1.1</version>
  <!-- external-version>0.3.0</external-version-->
  <description>
      3rd party library: Babel
  </description>

  <author>Luis Oliveira</author>

  <maintainer email="moesenle@cs.tum.edu">Lorenz Moesenlechner</maintainer>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>babel</license>

  <url type="website">http://common-lisp.net/project/babel/</url>
  <url type="bugtracker">https://github.com/cram-code/cram_core/issues</url>
  <url type="repository">https://github.com/cram-code/cram_core</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sbcl</build_depend>
  <build_depend>alexandria</build_depend>
  <build_depend>trivial_features</build_depend>

  <run_depend>sbcl</run_depend>
  <run_depend>alexandria</run_depend>
  <run_depend>trivial_features</run_depend>
</package>
