<package>
  <name>bullet_reasoning</name>
  <version>1.0.0</version>
  <description>
     bullet_reasoning
  </description>
  <author>Lorenz Moesenlechner</author>
  <maintainer email="musterman@fictional.de">Add Maintainer here</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/bullet_reasoning</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>alexandria</build_depend>
  <build_depend>cram_reasoning</build_depend>
  <build_depend>cram_manipulation_knowledge</build_depend>
  <build_depend>cl_bullet</build_depend>
  <build_depend>cl_bullet_vis</build_depend>
  <build_depend>cram_json_prolog</build_depend>
  <build_depend>cl_urdf</build_depend>
  <build_depend>cl_tf_datatypes</build_depend>
  <build_depend>cl_tf2</build_depend>
  <build_depend>cl_semantic_map_utils</build_depend>
  <build_depend>cram_designators</build_depend>
  <build_depend>location_costmap</build_depend>
  <build_depend>designators_ros</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>alexandria</run_depend>
  <run_depend>cram_reasoning</run_depend>
  <run_depend>cram_manipulation_knowledge</run_depend>
  <run_depend>cl_bullet</run_depend>
  <run_depend>cl_bullet_vis</run_depend>
  <run_depend>cram_json_prolog</run_depend>
  <run_depend>cl_urdf</run_depend>
  <run_depend>cl_tf_datatypes</run_depend>
  <run_depend>cl_tf2</run_depend>
  <run_depend>cl_semantic_map_utils</run_depend>
  <run_depend>cram_designators</run_depend>
  <run_depend>location_costmap</run_depend>
  <run_depend>designators_ros</run_depend>
</package>
