<package>
  <name>bullet_reasoning_designators</name>
  <version>1.0.0</version>
  <description>

     bullet_reasoning_designators

  </description>
  <author>Lorenz Moesenlechner</author>
  <maintainer email="musterman@fictional.de">Add Maintainer here</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/bullet_reasoning_designators</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cram_reasoning</build_depend>
  <build_depend>designators_ros</build_depend>
  <build_depend>cram_utilities</build_depend>
  <build_depend>cram_math</build_depend>
  <build_depend>bullet_reasoning</build_depend>
  <build_depend>cram_designators</build_depend>
  <build_depend>location_costmap</build_depend>
  <build_depend>cram_environment_representation</build_depend>
  <build_depend>cram_plan_knowledge</build_depend>
  <build_depend>roslisp_utilities</build_depend>
  <build_depend>alexandria</build_depend>
  <build_depend>cram_moveit</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>cram_reasoning</run_depend>
  <run_depend>designators_ros</run_depend>
  <run_depend>cram_utilities</run_depend>
  <run_depend>cram_math</run_depend>
  <run_depend>bullet_reasoning</run_depend>
  <run_depend>cram_designators</run_depend>
  <run_depend>location_costmap</run_depend>
  <run_depend>cram_environment_representation</run_depend>
  <run_depend>cram_plan_knowledge</run_depend>
  <run_depend>roslisp_utilities</run_depend>
  <run_depend>alexandria</run_depend>
  <run_depend>cram_moveit</run_depend>

</package>
