<package>
  <name>cffi</name>
  <version>0.2.2</version>
  <description>
    3rd party library: CFFI - The Common Foreign Function Interface
  </description>

  <author>James Bielman</author>

  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>

  <license>cffi</license>

  <url type="website">http://common-lisp.net/project/cffi/</url>
  <url type="bugtracker">https://github.com/cram2/cram_3rdparty/issues</url>
  <url type="repository">https://github.com/cram2/cram_3rdparty</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sbcl</build_depend>
  <build_depend>alexandria</build_depend>
  <build_depend>trivial_features</build_depend>
  <build_depend>babel</build_depend>

  <run_depend>sbcl</run_depend>
  <run_depend>alexandria</run_depend>
  <run_depend>trivial_features</run_depend>
  <run_depend>babel</run_depend>
</package>


