<package>
  <name>cl_store</name>
  <version>0.1.2</version>
  <!-- external-version>0.8.10</external-version-->
  <description>
      3rd party library: CL-STORE
  </description>

  <author>Sean Ross</author>

  <maintainer email="moesenle@cs.tum.edu">Lorenz Moesenlechner</maintainer>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>MIT</license>

  <url type="website">http://common-lisp.net/project/cl-store/</url>
  <url type="bugtracker">https://github.com/cram-code/cram_core/issues</url>
  <url type="repository">https://github.com/cram-code/cram_core</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sbcl</build_depend>

  <run_depend>sbcl</run_depend>
</package>


