<package>
  <name>cl_urdf</name>
  <version>1.0.0</version>
  <description>

     cl_urdf

  </description>
  <author>Lorenz Moesenlechner</author>
  <maintainer email="musterman@fictional.de">Add Maintainer here</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/cl_urdf</url>

  <!-- We include roslisp here to get the s-xml library which is part
       of roslisp's xml-rpc library -->
  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>sbcl</build_depend>
  <build_depend>roslisp</build_depend>
  <build_depend>cl_transforms</build_depend>
  <build_depend>cram_physics_utils</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>sbcl</run_depend>
  <run_depend>roslisp</run_depend>
  <run_depend>cl_transforms</run_depend>
  <run_depend>cram_physics_utils</run_depend>

</package>
