<package>
  <name>cl_utilities</name>
  <version>0.1.1</version>
  <!--external-version>1.2.4</external-version-->
  <description>
    3rd party library: CL-UTILITIES
  </description>

  <author>Peter Scott</author>

  <maintainer email="moesenle@cs.tum.edu">Lorenz Moesenlechner</maintainer>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>Public domain</license>

  <url type="website">http://common-lisp.net/project/cl-utilities/</url>
  <url type="bugtracker">https://github.com/cram-code/cram_core/issues</url>
  <url type="repository">https://github.com/cram-code/cram_core</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sbcl</build_depend>

  <run_depend>sbcl</run_depend>
</package>


