cmake_minimum_required(VERSION 2.8.3)
project(continuous_interaction)

find_package(catkin REQUIRED COMPONENTS alexandria cram_language cram_plan_events cram_occasions_events cram_plan_library cram_prolog cram_roslisp_common cram_transforms_stamped cram_semantic_map_designators roslisp)

catkin_package(
  CATKIN_DEPENDS alexandria cram_language cram_plan_events cram_occasions_events cram_plan_library cram_prolog cram_roslisp_common cram_transforms_stamped cram_semantic_map_designators roslisp
)

include_directories(
  ${catkin_INCLUDE_DIRS}
)
