<?xml version="1.0"?>
<package>
  <name>continuous_interaction</name>
  <version>0.1.0</version>
  <description>Continuous Interaction Helper Functionalities for CRAM Robot Plans</description>
  
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>cram_language</build_depend>
  <build_depend>alexandria</build_depend>
  <build_depend>cram_occasions_events</build_depend>
  <build_depend>cram_plan_events</build_depend>
  <build_depend>cram_plan_library</build_depend>
  <build_depend>cram_prolog</build_depend>
  <build_depend>cram_roslisp_common</build_depend>
  <build_depend>designators_ros</build_depend>
  <build_depend>object_location_designators</build_depend>
  <build_depend>roslisp</build_depend>
  
  <run_depend>cram_language</run_depend>
  <run_depend>alexandria</run_depend>
  <run_depend>cram_plan_events</run_depend>
  <run_depend>cram_occasions_events</run_depend>
  <run_depend>cram_plan_library</run_depend>
  <run_depend>cram_prolog</run_depend>
  <run_depend>cram_roslisp_common</run_depend>
  <run_depend>designators_ros</run_depend>
  <run_depend>object_location_designators</run_depend>
  <run_depend>roslisp</run_depend>

  <export>
  </export>
</package>
