<package>
  <name>cram_3rdparty</name>
  <version>0.1.1</version>
  <description>
    Various 3rd party Common LISP packages for the CRAM framework.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>
  <maintainer email="moesenle@cs.tum.edu">Lorenz Moesenlechner</maintainer>

  <author email="moesenle@cs.tum.edu">Lorenz Moesenlechner</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/cram_3rdparty</url>
  <url type="bugtracker">https://github.com/cram-code/cram_3rdparty/issues</url>
  <url type="repository">https://github.com/cram-code/cram_3rdparty</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>alexandria</run_depend>
  <run_depend>babel</run_depend>
  <run_depend>cffi</run_depend>
  <run_depend>cl_store</run_depend>
  <run_depend>cl_utilities</run_depend>
  <run_depend>fiveam</run_depend>
  <run_depend>gsd</run_depend>
  <run_depend>gsll</run_depend>
  <run_depend>lisp_unit</run_depend>
  <run_depend>split_sequence</run_depend>
  <run_depend>synchronization_tools</run_depend>
  <run_depend>trivial_features</run_depend>
  <run_depend>trivial_garbage</run_depend>
  <run_depend>trivial_gray_streams</run_depend>
  <run_depend>yason</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
