<?xml version="1.0"?>
<package>
  <name>cram_beginner_tutorial</name>
  <version>0.2.2</version>
  <description>The cram_beginner_tutorial package</description>

  <author>Lorenz Moesenlechner</author>
  <author>Benjamin Brieber</author>
  <author email="blandc@cs.uni-bremen.de">Mihai Pomarlan</author>
  <author email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</author>

  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>

  <license>BSD</license>

  <url type="website">http://cram-system.org/tutorials</url>
  <url type="bugtracker">https://github.com/cram2/cram_tutorials/issues</url>
  <url type="repository">https://github.com/cram2/cram_tutorials</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cram_language</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>cl_transforms</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roslisp</build_depend>
  <build_depend>cram_prolog</build_depend>
  <build_depend>cram_designators</build_depend>
  <build_depend>actionlib_lisp</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>turtle_actionlib</build_depend>
  <build_depend>cram_process_modules</build_depend>

  <run_depend>cram_language</run_depend>
  <run_depend>turtlesim</run_depend>
  <run_depend>cl_transforms</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roslisp</run_depend>
  <run_depend>cram_prolog</run_depend>
  <run_depend>cram_designators</run_depend>
  <run_depend>actionlib_lisp</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>turtle_actionlib</run_depend>
  <run_depend>cram_process_modules</run_depend>
</package>
