<package>
  <name>cram_bullet_reasoning</name>
  <version>0.2.0</version>
  <description>
     cram_bullet_reasoning
  </description>
  <author>Lorenz Moesenlechner</author>
  <maintainer email="musterman@fictional.de">Add Maintainer here</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/cram_bullet_reasoning</url>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>alexandria</build_depend>
  <build_depend>cram_prolog</build_depend>
  <build_depend>cram_robot_interfaces</build_depend>
  <build_depend>cl_bullet</build_depend>
  <build_depend>cl_bullet_vis</build_depend>
  <build_depend>cl_urdf</build_depend>
  <build_depend>cl_transforms_stamped</build_depend>
  <build_depend>cl_transforms</build_depend>
  <build_depend>cram_semantic_map_utils</build_depend>
  <build_depend>cram_designators</build_depend>
  <build_depend>cram_location_costmap</build_depend>
  <build_depend>cram_transforms_stamped</build_depend>
  <build_depend>roslisp_utilities</build_depend>
  <build_depend>cram_utilities</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>alexandria</run_depend>
  <run_depend>cram_prolog</run_depend>
  <run_depend>cram_robot_interfaces</run_depend>
  <run_depend>cl_bullet</run_depend>
  <run_depend>cl_bullet_vis</run_depend>
  <run_depend>cl_urdf</run_depend>
  <run_depend>cl_transforms_stamped</run_depend>
  <run_depend>cl_transforms</run_depend>
  <run_depend>cram_semantic_map_utils</run_depend>
  <run_depend>cram_designators</run_depend>
  <run_depend>cram_location_costmap</run_depend>
  <run_depend>cram_transforms_stamped</run_depend>
  <run_depend>roslisp_utilities</run_depend>
  <run_depend>cram_utilities</run_depend>
</package>
